Correction des cartes pour la version mobile. Début de la correction de la version tablette

--- a/assets/css/scss/components/_menu-cards.scss
+++ b/assets/css/scss/components/_menu-cards.scss
@@ -35,23 +35,21 @@
   }
   .card {
     @include flexbox-rowcenter;
-    justify-content: flex-start;
+    justify-content: space-between;
     position: relative;
     width: 90%;
-    height: 65px;
-    flex-wrap: wrap;
+    // height: 65px;
     border-radius: 20px 20px 20px 20px;
     color: black;
     background-color: white;
     text-decoration: none;
     box-shadow: 5px 5px 8px 5px #dfdfdf;
     margin-bottom: 20px;
-    padding: 20px;
     @media screen and (min-width: $tablet) {
       width: 30%;
       @include flexbox-columncenter;
       flex-wrap: wrap;
-      height: 65px;
+      height: 85px;
     }
     @media screen and (min-width: $desktop) {
       width: 100%;
@@ -64,65 +62,67 @@
         }
       }
     }
-  }
-  .splitleft {
-    @include flexbox-columnstart;
-    gap: 13px;
-    margin-right: 50px;
-    @include text-shorten;
-    p {
+    .splitleft {
+      @include flexbox-columnstart;
+      gap: 13px;
       @include text-shorten;
+      padding: 19px;
+      p {
+        @include text-shorten;
+      }
     }
-  }
-  .splitright {
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    display: flex;
-    overflow: hidden;
-  }
-  .card_title {
-    font-weight: bold;
-    width: 100%;
-    margin: 0;
-    font-size: $card-title;
-    @media screen and (min-width: $tablet) {
-      @include flexbox-columncenter;
-      margin-bottom: 15px;
+    .splitright {
+      top: 0px;
+      right: 0px;
+      display: flex;
+      overflow: hidden;
+      height: 85px;
     }
-  }
-  .card_subtitle {
-    width: 92%;
-    margin: 0;
-    font-size: $card-subtitle;
-    margin-top: -15px;
-    @media screen and (min-width: $tablet) {
-      @include flexbox-columncenter;
+    .card_title {
+      font-weight: bold;
+      width: 100%;
+      margin: 0;
+      font-size: $card-title;
+      @media screen and (min-width: $tablet) {
+        @include flexbox-columncenter;
+        font-size: 17px;
+        margin-bottom: 15px;
+      }
     }
-  }
-  .card_price {
-    font-weight: bold;
-    margin: 0 20px 10px 0;
-    align-self: flex-end;
-  }
-  .card_checkicon {
-    background-color: $tertiary-color;
-    width: 100%;
-    font-size: 135px;
-    border-radius: 0px 20px 20px 0px;
-    margin: 0;
-    display: block;
-    width: 0;
-    color: white;
-    text-align: center;
-    font-size: 20px;
-    line-height: 65px;
-    //animation: checkiconhide 0.4s ease-in-out forwards;
-    // &:hover {
-    //   animation: checkiconshow 0.4s ease-in-out forwards;
-    //   & > i {
-    //     animation: checkiconrotate 0.4s ease-in-out forwards;
-    //   }
-    // }
+    .card_subtitle {
+      width: 100%;
+      margin: 0;
+      font-size: 15px;
+      margin-top: -15px;
+      @media screen and (min-width: $tablet) {
+        @include flexbox-columncenter;
+        font-size: 13px;
+      }
+    }
+    .card_price {
+      font-weight: bold;
+      margin: 0 20px 10px 0;
+      align-self: flex-end;
+    }
+    .card_checkicon {
+      background-color: $tertiary-color;
+      width: 100%;
+      font-size: 135px;
+      border-radius: 0px 20px 20px 0px;
+      margin: 0;
+      display: block;
+      width: 0;
+      color: white;
+      text-align: center;
+      font-size: 30px;
+      line-height: 84px;
+      //animation: checkiconhide 0.4s ease-in-out forwards;
+      // &:hover {
+      //   animation: checkiconshow 0.4s ease-in-out forwards;
+      //   & > i {
+      //     animation: checkiconrotate 0.4s ease-in-out forwards;
+      //   }
+      // }
+    }
   }
 }
