--- a/assets/css/scss/pages/_restaurant.scss
+++ b/assets/css/scss/pages/_restaurant.scss
@@ -7,7 +7,7 @@
     margin-bottom: 10px;
   }
   .page-head_returnlink {
-    font-size: 4.8rem;
+    font-size: 1.8rem;
     position: absolute;
     left: 4%;
   }
