--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -462,18 +462,15 @@ footer {
   justify-content: center;
   align-items: center;
   margin: auto;
-  justify-content: flex-start;
+  justify-content: space-between;
   position: relative;
   width: 90%;
-  height: 65px;
-  flex-wrap: wrap;
   border-radius: 20px 20px 20px 20px;
   color: black;
   background-color: white;
   text-decoration: none;
   box-shadow: 5px 5px 8px 5px #dfdfdf;
   margin-bottom: 20px;
-  padding: 20px;
 }
 @media screen and (min-width: 576px) {
   .menu-card .card {
@@ -483,7 +480,7 @@ footer {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    height: 65px;
+    height: 85px;
   }
 }
 @media screen and (min-width: 992px) {
@@ -497,64 +494,66 @@ footer {
 .menu-card .card:hover .card_checkicon > i {
   animation: checkiconrotate 0.4s ease-in-out forwards;
 }
-.menu-card .splitleft {
+.menu-card .card .splitleft {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
   gap: 13px;
-  margin-right: 50px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  padding: 19px;
+}
+.menu-card .card .splitleft p {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-.menu-card .splitleft p {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-.menu-card .splitright {
-  position: absolute;
+.menu-card .card .splitright {
   top: 0px;
   right: 0px;
   display: flex;
   overflow: hidden;
+  height: 85px;
 }
-.menu-card .card_title {
+.menu-card .card .card_title {
   font-weight: bold;
   width: 100%;
   margin: 0;
   font-size: 1.3rem;
 }
 @media screen and (min-width: 576px) {
-  .menu-card .card_title {
+  .menu-card .card .card_title {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-size: 17px;
     margin-bottom: 15px;
   }
 }
-.menu-card .card_subtitle {
-  width: 92%;
+.menu-card .card .card_subtitle {
+  width: 100%;
   margin: 0;
-  font-size: 1.1rem;
+  font-size: 15px;
   margin-top: -15px;
 }
 @media screen and (min-width: 576px) {
-  .menu-card .card_subtitle {
+  .menu-card .card .card_subtitle {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-size: 13px;
   }
 }
-.menu-card .card_price {
+.menu-card .card .card_price {
   font-weight: bold;
   margin: 0 20px 10px 0;
   align-self: flex-end;
 }
-.menu-card .card_checkicon {
+.menu-card .card .card_checkicon {
   background-color: #99e2d0;
   width: 100%;
   font-size: 135px;
@@ -564,8 +563,8 @@ footer {
   width: 0;
   color: white;
   text-align: center;
-  font-size: 20px;
-  line-height: 65px;
+  font-size: 30px;
+  line-height: 84px;
 }
 
 .order_button {
@@ -852,7 +851,7 @@ main .section3 {
   margin-bottom: 10px;
 }
 .page-head .page-head_returnlink {
-  font-size: 4.8rem;
+  font-size: 1.8rem;
   position: absolute;
   left: 4%;
 }
